test/visibility/private/uses/accessSelective.good
accessSelective.chpl:3: error: 'c' undeclared (first use this function)
